fixing padding and collapse?

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -18,7 +18,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .post article {
-  border: 1px solid #ccc;
+}
+
+.card-body {
   padding: 50px 75px;
 }
 
